fixed forward propagation

--- a/main.ipynb
+++ b/main.ipynb
@@ -40,9 +40,12 @@
     "  encoded_1 = 0\n",
     "  encoded_2 = 0\n",
     "  for iteration in pixel_input:\n",
-    "    encoded_1 = encoded_1 + pixel_input[iteration]*weight_input[0][iteration] + bias_input[0]  \n",
+    "    encoded_1 = encoded_1 + pixel_input[iteration]*weight_input[0][iteration] \n",
     "    ############################ First Instruction testing ############################\n",
-    "    encoded_2 = encoded_2 + pixel_input[iteration]*weight_input[1][iteration] + bias_input[1]  \n",
+    "    encoded_2 = encoded_2 + pixel_input[iteration]*weight_input[1][iteration] \n",
+    "  encoded_1 = encoded_1 + bias_input[0]\n",
+    "  encoded_2 = encoded_2 + bias_input[1]\n",
+    "  \n",
     "  #passing through activation function (ReLu) and rewriting encoded_1 and encoded_2 value\n",
     "  encoded_1_activated = ReLu(encoded_1)\n",
     "  encoded_2_activated = ReLu(encoded_2)\n",
